-Changed the link for home in the navbar to header, so as to avoid having to update it constantly as one cycles through the carousel. -Added some padding to the top of the about us page to close the whitespace gap between it the carousel images.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -443,7 +443,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 /* === CAROUSEL SLIDES === */
 #header{
 	position: relative;
-	height: 110%;
+	height: 100%;
 }
 
 
@@ -506,26 +506,28 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 #slide1 {
 	background-image: url(../img/backgrounds/Oxalys.jpg);
 	background-repeat: no-repeat;
-	background-size: auto auto;
+	background-size: cover;
 	z-index: 3;
 }
 
 #slide2{
 	background-image: url(../img/backgrounds/MountainPath.jpg);
 	background-repeat: no-repeat;
+	background-size: cover;
 	z-index: 2;
 }
 
 #slide3 {
 	background-image: url(../img/backgrounds/Amaryllis.jpg);
 	background-repeat: no-repeat;
+	background-size: cover;
 	z-index: 1;
 }
 
 /* === ABOUT SECTION === */
 #about {
 	background-color: #F2F2F3;
-	margin-top: -2%;
+	padding-top: 5%;
 }
 
 /* === THERAPEUTICS SECTION === */
@@ -539,7 +541,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 #services{
 	background-image: url(../img/backgrounds/Pipette.jpg);
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: cover;
 }
 
 /* === TEAM === */	
